# lxqt-kcm-integration

./: .gitattributes  CHANGELOG  CMakeLists.txt  README.md
applications/: CMakeLists.txt  lxqt-kcmshell5-appearance.desktop  lxqt-kcmshell5-bluetooth.desktop  lxqt-kcmshell5-fancontrol.desktop  lxqt-kcmshell5-fcitx.desktop  lxqt-kcmshell5-fcitx5.desktop  lxqt-kcmshell5-kdeconnect.desktop  lxqt-kcmshell5-kwinsettings.desktop  lxqt-kcmshell5-nx-firewall.desktop  lxqt-kcmshell5-plymouth.desktop  lxqt-kcmshell5-printer-manager.desktop  lxqt-kcmshell5-screenlocker.desktop  lxqt-kcmshell5-sddm.desktop  lxqt-kcmshell5-systeminfo.desktop  lxqt-kcmshell5-systemsettings.desktop  lxqt-kcmshell5-thunderbolt.desktop  lxqt-kcmshell5-wacomtablet.desktop  lxqt-org.kde.systemmonitor.desktop
kwin/: lxqt-kcmshell5-kcmkwineffects.desktop  lxqt-kcmshell5-kwinadvanced.desktop  lxqt-kcmshell5-kwincompositing.desktop  lxqt-kcmshell5-kwindecoration.desktop  lxqt-kcmshell5-kwinfocus.desktop  lxqt-kcmshell5-kwinmoving.desktop  lxqt-kcmshell5-kwinsettings.desktop
kwin/primitives/: lxqt-kcmshell5-desktop.desktop  lxqt-kcmshell5-kwinactions.desktop  lxqt-kcmshell5-kwinoptions.desktop  lxqt-kcmshell5-kwinrules.desktop  lxqt-kcmshell5-kwinscreenedges.desktop  lxqt-kcmshell5-kwinscripts.desktop  lxqt-kcmshell5-kwintabbox.desktop
packaging/: PKGBUILD
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  lxqt-kcm-appearance.install  lxqt-kcm-bluetooth.install  lxqt-kcm-kwin.install  lxqt-kcm-sysinfo.install  rules  watch
xfwm4/applications/: lxqt-xf-ui-settings.desktop  (+4 more)
(+2 files in other folders)
